# buzzllm

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  devlogs.md  main.py  pyproject.toml  ralphy.py
.cargo/: config.toml
.dingllm/prds/v2/: 000_overview.md  001_core_types_and_cli.md  002_provider_system.md  003_streaming_and_llm_loop.md  004_tool_system.md  005_codesearch.md  006_websearch.md  007_pythonexec.md  008_prompts_and_logging.md  009_testing.md
.dingllm/prds/v3/: 000_remove_python.md
.dingllm/specs/v2/: 001_context_flowchart_buzzllm.mmd  002_container_flowchart_buzzllm.mmd  003_component_flowchart_buzzllm.mmd  004_component_sequence_chat_flow.mmd  005_component_sequence_tool_execution.mmd  _manifest.md
.github/workflows/: ci.yml
examples/: tensor_parallelism.md
plans/: API.md  ARCH.md  CHECKLIST.md  DATA.md  DEVLOG_CONTRACT.md  FLOWS.md  IMPLEMENTER.md  PLAN.md  RISKS.md  TESTPLAN.md  VERIFIER.md
python_runtime_docker/: Dockerfile  build_docker.sh  kernel_server.py
rust/: Cargo.toml
rust/src/: lib.rs  llm.rs  main.rs  output.rs  types.rs
rust/src/prompts/: mod.rs  replace.txt  websearch.txt
rust/src/providers/: anthropic.rs  mod.rs  openai_chat.rs  openai_responses.rs  vertexai_anthropic.rs
rust/src/tools/: bash.rs  codesearch.rs  mod.rs  pythonexec.rs  websearch.rs  write_file.rs
rust/tests/: test_e2e.rs  test_output.rs  test_providers.rs  test_tools.rs  test_types_prompts.rs  test_websearch.rs
src/: lib.rs  main.rs
src/buzzllm/: llm.py  main.py  subagent.py  subagent_runner.py
src/buzzllm/prompts/: __init__.py  codesearch_prompt.py  generate_prompt.py  hackhub_prompt.py  helpful_prompt.py  memory_prompt.py  replace_prompt.py  replace_prompt.txt  (+1 more)
src/prompts/: __init__.py  codesearch.txt  codesearch_prompt.txt  coding.txt  generate.txt  generate_prompt.txt  hackhub.txt  helpful.txt  helpful_prompt.txt
src/providers/: anthropic.rs  openai_chat.rs  openai_responses.rs  vertexai_anthropic.rs
src/tools/: websearch.rs
tests/: conftest.py  test_e2e.rs  test_providers.rs  test_tools.rs  test_websearch.rs
tests/e2e/: test_cli.py
tests/integration/: test_anthropic_integration.py  test_openai_integration.py  test_openai_responses_integration.py  test_subagent_runner.py
tests/unit/: test_codesearch.py  test_llm_dataclasses.py  test_llm_request_args.py  test_llm_stream_handlers.py  test_llm_structured_output.py  test_llm_tool_messages.py  test_main_parse_args.py  test_pythonexec.py  test_subagent_payload.py  test_subagent_sse_parser.py  test_tool_catalog.py  test_utils.py  test_websearch.py
(+6 files in other folders)
