[project]
name = "buzzllm"
version = "0.2.2"
description = "CLI for invoking LLMs with streaming response"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.4",
    "crawl4ai",
    "loguru",
    "tenacity",
    "docker",
]

[project.scripts]
buzzllm = "buzzllm.main:main"


[dependency-groups]
dev = [
    "ipython>=8.37.0",
]
