[package]
name = "buzzllm"
version = "0.2.8"
edition = "2021"

[[bin]]
name = "buzzllm"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
anyhow = "1"
async-trait = "0.1"
bollard = "0.18"
scraper = "0.22"
tokio-retry = "0.3"
regex = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
tempfile = "3.27.0"
tokio-test = "0.4.5"
